app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8gb-discovery
  labels:
    app: overlay.me
spec:
  replicas: 2
  selector:
    matchLabels:
      app: overlay.me
  template:
    metadata:
      labels:
        app: overlay.me
    spec:
      restartPolicy: Always
      containers:
        - name: k8gb-discovery
          image: kuritka/k8gb-discovery:0.0.1
          imagePullPolicy: Always
